--- a/build.gradle
+++ b/build.gradle
@@ -25,7 +25,13 @@ repositories {
 
 
 dependencies {
+    compile('org.springframework.boot:spring-boot-starter-web')
+    compile('org.springframework.boot:spring-boot-starter-data-jpa')
+
+    compile('org.postgresql:postgresql')
+    compile('org.flywaydb:flyway-core:5.2.0')
+    compileOnly('org.projectlombok:lombok:1.18.2')
+
     implementation('org.springframework.boot:spring-boot-starter')
-    runtimeOnly('org.postgresql:postgresql')
     testImplementation('org.springframework.boot:spring-boot-starter-test')
 }
