--- a/build.gradle
+++ b/build.gradle
@@ -1,46 +1,20 @@
 buildscript {
     ext {
         springBootVersion = '2.0.6.RELEASE'
+        mooworkVersion = '1.2.0'
     }
     repositories {
         mavenCentral()
+        maven { url "https://plugins.gradle.org/m2/" }
+        mavenLocal()
     }
     dependencies {
         classpath("org.springframework.boot:spring-boot-gradle-plugin:${springBootVersion}")
+        classpath "com.moowork.gradle:gradle-node-plugin:${mooworkVersion}"
     }
 }
-
-apply plugin: 'java'
-apply plugin: 'eclipse'
-apply plugin: 'org.springframework.boot'
-apply plugin: 'io.spring.dependency-management'
-
-group = 'com.tftest'
-version = '0.0.1-SNAPSHOT'
-sourceCompatibility = 1.8
 
 repositories {
+    mavenLocal()
     mavenCentral()
-}
-
-
-sourceSets {
-    build {
-        java.srcDir file('src/main/java')
-    }
-}
-
-dependencies {
-    compile('org.springframework.boot:spring-boot-starter-web')
-    compile('org.springframework.boot:spring-boot-starter-data-jpa')
-
-    compile('org.postgresql:postgresql')
-    compile('org.flywaydb:flyway-core:5.2.0')
-
-    compile('com.fasterxml.jackson.datatype:jackson-datatype-jdk8:2.9.7')
-    compile ('com.fasterxml.jackson.datatype:jackson-datatype-jsr310:2.9.7')
-    compile ('com.fasterxml.jackson.module:jackson-module-parameter-names:2.9.7')
-
-    implementation('org.springframework.boot:spring-boot-starter')
-    testImplementation('org.springframework.boot:spring-boot-starter-test')
 }
